# ubuntu-wallpaper-changer

./: .gitignore  CHANGES.md  CMakeLists.txt  LICENSE  README.md  UbuntuWallpaperChangerConfig.h.in  main.cpp  to-do.txt  ubuntu_wallpaper_changer_config.h.in
.git-hooks/: pre-commit  run_build.sh
.github/workflows/: run-tests.yml
src/: CMakeLists.txt  appfacade.cpp  changecommand.cpp  check_tests.cpp  commandinterface.h  configurationparser.cpp  configurationparserinterface.h  directory.cpp  dirhandler.cpp  exceptions.h  filepicker.cpp  logger.cpp  strategycontext.cpp  strategyinterface.h  systemcommand.cpp  uniformstrategy.cpp  weightedstrategy.cpp
test/: CMakeLists.txt  test_all.cpp  test_appfacade.cpp  test_changecommand.cpp  test_configurationparser.cpp  test_directory.cpp  test_filepicker.cpp  test_logger.cpp  test_strategycontext.cpp  test_systemcommand.cpp  test_tests.cpp  test_uniformstrategy.cpp  test_weightedstrategy.cpp
test/resources/: allowed_extensions_config.cfg  appfacade_exclusions_config.cfg  appfacade_seconds_config.cfg  bad_key_config.cfg  bad_picture_options_config.cfg  bad_policy_config.cfg  bad_priorities_config.cfg  bad_seconds_config.cfg  bad_seconds_config2.cfg  basic_config.cfg  comment_config.cfg  empty_config.cfg  empty_weighted_config.cfg  exclusions_config.cfg  extensions_config.cfg  full_config.cfg  picture_options_config.cfg  policy_config.cfg  priorities_config.cfg  priorities_config_with_spaces.cfg  real_config.cfg  seconds_config.cfg  space_config.cfg  test_config.cfg
